# OxTorch

./: .env  .gitignore  Arm Nowa Era CPU i Biznesu.md  CHANGELOG.md  README.md  align_depth.py  bench_table.py  benchmark_dominance.py  benchmark_gemma_3_4b.py  benchmark_rust_vs_py.py  benchmark_rusted_15gb.py  benchmark_rusted_matmul.py  benchmark_rusted_matmul_15gb.py  benchmark_rusted_streaming.py  chat_gemma.py  debug_vulkan.py  diag.py  download_and_convert_gemma.py  download_gemma_e2b.py  dummy_test.gguf  dump_weights.py  extract_frames.py  files_desc.md  gemma-weights  generate_prompts.py  generate_tasks.py  gs_to_mesh.py  imgui.ini  inspect_safetensors.py  make_compact_task.py  regressions_audit.md  results_temp.md  run_colmap.py  splat_studio.py  sprint2_audit_report.md  test_500.py  test_f16_linear_small.py  test_f16_matmul_small.py  test_f16_relu.py  test_pytorch_code.py  (+10 more)
vulkannn_rusted/: .gitignore  Cargo.toml  build.rs  pyproject.toml  run_parity_check.py  test_fallback_dispatcher.py
vulkannn_rusted/docs/: vulkan_optimization_research.md
vulkannn_rusted/gguf_native/: .cargo_vcs_info.json  Cargo.toml
vulkannn_rusted/gguf_native/src/: lib.rs  parser.rs
vulkannn_rusted/oxtorch/: __init__.py  tensor.py
vulkannn_rusted/scripts/: chat_bitnet.py
vulkannn_rusted/src/: avx_swar.rs  backend.rs  backend.rs.bak  buf_pool.rs  crook_scheduler.rs  hardware_config.rs  io_uring_engine.rs  lib.rs  lib.rs.bak  prng.rs  streaming.rs  swar_int8.rs  sys_info.rs.bak  tensor.rs
vulkannn_rusted/src/cpu/: activations.rs  conversions.rs  dispatch.rs  elementwise.rs  matmul.rs  mod.rs  reductions.rs  tiling_cpu.rs
vulkannn_rusted/src/cpu_old/: mod.rs
vulkannn_rusted/src/models/: bitnet.rs  mod.rs
vulkannn_rusted/src/shaders/: activation.wgsl  activation.wgsl.spv  add.wgsl  add.wgsl.spv  bit_linear.comp  bit_linear.comp.spv  bit_linear_fast.comp  bit_linear_fast.comp.spv  bit_linear_lut.comp  bit_linear_lut.comp.spv  elementwise.comp  elementwise.comp.spv  index_select.comp  (+17 more)
vulkannn_rusted/tests/: last_results.json  test_bit_linear.py  test_native_bitnet.py  verify_f32_vulkan.py  verify_new_ops.py
(+1135 files in other folders)
