[package]
name = "vulkannn_rusted"
version = "0.1.0"
edition = "2021"

[lib]
name = "vulkannn_rusted"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
wgpu = "22.1"
pollster = "0.3.0" 
memmap2 = "0.9"
numpy = "0.22"
bytemuck = { version = "1.15", features = ["derive"] }
libc = "0.2"
rayon = "1.10"
matrixmultiply = { version = "0.3", features = ["threading"] }
