[package]
name = "vulkannn_rusted_exp"
version = "3.5.0"
edition = "2021"

[lib]
name = "vulkannn_rusted_exp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
ash = "0.38"
gpu-allocator = "0.27"
memmap2 = "0.9"
numpy = "0.22"
bytemuck = { version = "1.15", features = ["derive"] }
libc = "0.2"
rayon = "1.10"
matrixmultiply = { version = "0.3", features = ["threading"] }
gemm = { version = "0.17", features = ["f16"] }
half = { version = "2.4", features = ["bytemuck", "num-traits"] }
num-traits = "0.2"
io-uring = "0.6"

[build-dependencies]
naga = { version = "22.1", features = ["wgsl-in", "spv-out"] }
